--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Pak - Track Your Gaming Collection</title>
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- Favicons -->
+    <link rel="icon" href="../icons/web/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" sizes="192x192" href="../icons/web/icon-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="../icons/web/icon-512.png">
+    <link rel="apple-touch-icon" href="../icons/web/apple-touch-icon.png">
+    <link rel="mask-icon" href="../icons/web/icon-512.png" color="#000000">
+    
+    <!-- Web App Manifest -->
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div class="crt-screen">
