--- a/site/index.html
+++ b/site/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="styles.css">
     
     <!-- Favicons -->
-    <link rel="icon" href="/icons/web/favicon.ico" sizes="any">
+    <link rel="icon" href="/img/favicon.ico" sizes="any">
     <link rel="icon" type="image/png" sizes="192x192" href="/icons/web/icon-192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="/icons/web/icon-512.png">
     <link rel="apple-touch-icon" href="/icons/web/apple-touch-icon.png">
@@ -118,12 +118,13 @@
                             <span class="platform-name">FreeBSD</span>
                             <span class="download-badge">Coming Soon</span>
                         </a>
-                        <a href="#" class="download-card web" data-platform="web">
-                            <div class="web-icon">
-                                <svg viewBox="0 0 24 24" fill="currentColor">
-                                    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.31-8.86c-1.77-.45-2.34-.94-2.34-1.67 0-.84.79-1.43 2.1-1.43 1.38 0 1.9.66 1.94 1.64h1.71c-.05-1.34-.87-2.57-2.49-2.97V5H10.9v1.69c-1.51.32-2.72 1.3-2.72 2.81 0 1.79 1.49 2.69 3.66 3.21 1.95.46 2.34 1.15 2.34 1.87 0 .53-.39 1.39-2.1 1.39-1.6 0-2.23-.72-2.32-1.64H8.04c.1 1.7 1.36 2.66 2.86 2.97V19h2.34v-1.67c1.52-.29 2.72-1.16 2.72-2.92 0-2.28-1.91-2.86-3.66-3.21z"/>
-                                </svg>
-                            </div>
+                        <a href="#" class="download-card" data-platform="redox">
+                            <img src="img/os-redox.png" alt="Redox" class="platform-icon">
+                            <span class="platform-name">Redox</span>
+                            <span class="download-badge">Coming Soon</span>
+                        </a>
+                        <a href="#" class="download-card" data-platform="web">
+                            <img src="img/os-web.png" alt="Web" class="platform-icon">
                             <span class="platform-name">Web</span>
                             <span class="download-badge">Coming Soon</span>
                         </a>
