- add GitHub link to site

--- a/site/index.html
+++ b/site/index.html
@@ -143,6 +143,10 @@
 
                 <footer class="retro-footer">
                     <p>Built with Rust • Powered by egui</p>
+                    <a href="https://github.com/Aspenini/Memory-Pak" target="_blank" rel="noopener noreferrer" class="github-link">
+                        <img src="img/github.png" alt="GitHub" class="github-icon">
+                        <span>View on GitHub</span>
+                    </a>
                 </footer>
             </main>
         </div>
