- added Cargo download option to site

--- a/site/index.html
+++ b/site/index.html
@@ -138,6 +138,16 @@
                             <span class="platform-name">Android</span>
                             <span class="download-badge">Coming Soon</span>
                         </a>
+                        <div class="download-card cargo-card" data-platform="cargo">
+                            <img src="img/cargo.png" alt="Cargo" class="platform-icon cargo-icon">
+                            <span class="platform-name">Cargo</span>
+                            <div class="cargo-install">
+                                <code class="cargo-command">cargo install Memory-Pak</code>
+                                <button class="copy-btn" id="cargo-copy-btn">
+                                    <span class="copy-text">Copy</span>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </section>
 
