- rename Cargo download to crates.io

--- a/site/index.html
+++ b/site/index.html
@@ -139,8 +139,8 @@
                             <span class="download-badge">Coming Soon</span>
                         </a>
                         <div class="download-card cargo-card" data-platform="cargo">
-                            <img src="img/cargo.png" alt="Cargo" class="platform-icon cargo-icon">
-                            <span class="platform-name">Cargo</span>
+                            <img src="img/cargo.png" alt="crates.io" class="platform-icon cargo-icon">
+                            <span class="platform-name">crates.io</span>
                             <div class="cargo-install">
                                 <code class="cargo-command">cargo install Memory-Pak</code>
                                 <button class="copy-btn" id="cargo-copy-btn">
