- update download links

--- a/site/index.html
+++ b/site/index.html
@@ -84,35 +84,30 @@
                 <section class="downloads">
                     <h2 class="section-title">Download</h2>
                     <div class="download-grid">
-                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.0/memory-pak_0.1.0_windows-x86_64.exe" 
+                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak_0.1.2_windows-x86_64.exe" 
                            class="download-card" 
                            data-platform="windows"
-                           download="memory-pak_0.1.0_windows-x86_64.exe">
+                           download="memory-pak_0.1.2_windows-x86_64.exe">
                             <img src="img/os-windows-11.png" alt="Windows" class="platform-icon">
                             <span class="platform-name">Windows</span>
                             <span class="download-badge">Download</span>
                         </a>
-                        <a href="#" class="download-card" data-platform="macos">
+                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak_0.1.2_macos-x86_64" 
+                           class="download-card" 
+                           data-platform="macos"
+                           download="memory-pak_0.1.2_macos-x86_64">
                             <img src="img/os-macos.png" alt="macOS" class="platform-icon">
                             <span class="platform-name">macOS</span>
-                            <span class="download-badge">Coming Soon</span>
+                            <span class="download-badge">Download</span>
                         </a>
-                        <div class="download-card linux-card" data-platform="linux">
+                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak_0.1.2_linux-x86_64" 
+                           class="download-card" 
+                           data-platform="linux"
+                           download="memory-pak_0.1.2_linux-x86_64">
                             <img src="img/os-linux-na.png" alt="Linux" class="platform-icon">
                             <span class="platform-name">Linux</span>
-                            <div class="linux-downloads">
-                                <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.0/memory-pak_0.1.0_linux-x86_64.deb" 
-                                   class="linux-download-btn"
-                                   download="memory-pak_0.1.0_linux-x86_64.deb">
-                                    <span class="download-badge">.deb Package</span>
-                                </a>
-                                <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.0/memory-pak_0.1.0_linux-x86_64" 
-                                   class="linux-download-btn"
-                                   download="memory-pak_0.1.0_linux-x86_64">
-                                    <span class="download-badge">Binary</span>
-                                </a>
-                            </div>
-                        </div>
+                            <span class="download-badge">Download</span>
+                        </a>
                         <a href="#" class="download-card" data-platform="freebsd">
                             <img src="img/os-bsd.png" alt="FreeBSD" class="platform-icon">
                             <span class="platform-name">FreeBSD</span>
