- rename downloads and add FreeBSD download

--- a/site/index.html
+++ b/site/index.html
@@ -84,34 +84,37 @@
                 <section class="downloads">
                     <h2 class="section-title">Download</h2>
                     <div class="download-grid">
-                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak_0.1.2_windows-x86_64.exe" 
+                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak-0.1.2-x86_64-pc-windows-msvc.exe" 
                            class="download-card" 
                            data-platform="windows"
-                           download="memory-pak_0.1.2_windows-x86_64.exe">
+                           download="memory-pak-0.1.2-x86_64-pc-windows-msvc.exe">
                             <img src="img/os-windows-11.png" alt="Windows" class="platform-icon">
                             <span class="platform-name">Windows</span>
                             <span class="download-badge">Download</span>
                         </a>
-                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak_0.1.2_macos-x86_64" 
+                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak-0.1.2-x86_64-apple-darwin" 
                            class="download-card" 
                            data-platform="macos"
-                           download="memory-pak_0.1.2_macos-x86_64">
+                           download="memory-pak-0.1.2-x86_64-apple-darwin">
                             <img src="img/os-macos.png" alt="macOS" class="platform-icon">
                             <span class="platform-name">macOS</span>
                             <span class="download-badge">Download</span>
                         </a>
-                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak_0.1.2_linux-x86_64" 
+                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak-0.1.2-x86_64-unknown-linux-gnu" 
                            class="download-card" 
                            data-platform="linux"
-                           download="memory-pak_0.1.2_linux-x86_64">
+                           download="memory-pak-0.1.2-x86_64-unknown-linux-gnu">
                             <img src="img/os-linux-na.png" alt="Linux" class="platform-icon">
                             <span class="platform-name">Linux</span>
                             <span class="download-badge">Download</span>
                         </a>
-                        <a href="#" class="download-card" data-platform="freebsd">
+                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak-0.1.2-x86_64-unknown-freebsd" 
+                           class="download-card" 
+                           data-platform="freebsd"
+                           download="memory-pak-0.1.2-x86_64-unknown-freebsd">
                             <img src="img/os-bsd.png" alt="FreeBSD" class="platform-icon">
                             <span class="platform-name">FreeBSD</span>
-                            <span class="download-badge">Coming Soon</span>
+                            <span class="download-badge">Download</span>
                         </a>
                         <a href="#" class="download-card" data-platform="redox">
                             <img src="img/os-redox.png" alt="Redox" class="platform-icon">
