--- a/site/index.html
+++ b/site/index.html
@@ -84,58 +84,57 @@
                 <section class="downloads">
                     <h2 class="section-title">Download</h2>
                     <div class="download-grid">
-                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak-0.1.2-x86_64-pc-windows-msvc.exe" 
-                           class="download-card" 
-                           data-platform="windows"
-                           download="memory-pak-0.1.2-x86_64-pc-windows-msvc.exe">
+                        <div class="download-card" data-platform="windows">
                             <img src="img/os-windows-11.png" alt="Windows" class="platform-icon">
                             <span class="platform-name">Windows</span>
-                            <span class="download-badge">Download</span>
-                        </a>
-                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak-0.1.2-x86_64-apple-darwin" 
-                           class="download-card" 
-                           data-platform="macos"
-                           download="memory-pak-0.1.2-x86_64-apple-darwin">
+                            <div class="download-buttons">
+                                <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.5/Memory-Pak-0.1.5-windows-x86_64.msi" 
+                                   class="download-badge" 
+                                   download="Memory-Pak-0.1.5-windows-x86_64.msi">MSI Installer</a>
+                                <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.5/Memory-Pak-0.1.5-windows-x86_64-portable.exe" 
+                                   class="download-badge" 
+                                   download="Memory-Pak-0.1.5-windows-x86_64-portable.exe">Portable EXE</a>
+                            </div>
+                        </div>
+                        <div class="download-card" data-platform="macos">
                             <img src="img/os-macos.png" alt="macOS" class="platform-icon">
                             <span class="platform-name">macOS</span>
-                            <span class="download-badge">Download</span>
-                        </a>
-                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak-0.1.2-x86_64-unknown-linux-gnu" 
-                           class="download-card" 
-                           data-platform="linux"
-                           download="memory-pak-0.1.2-x86_64-unknown-linux-gnu">
+                            <div class="download-buttons">
+                                <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.5/Memory-Pak-0.1.5-macOS-x86_64.app.zip" 
+                                   class="download-badge" 
+                                   download="Memory-Pak-0.1.5-macOS-x86_64.app.zip">App Bundle</a>
+                                <span class="download-badge coming-soon">DMG Coming Soon</span>
+                            </div>
+                        </div>
+                        <div class="download-card" data-platform="linux">
                             <img src="img/os-linux-na.png" alt="Linux" class="platform-icon">
                             <span class="platform-name">Linux</span>
-                            <span class="download-badge">Download</span>
-                        </a>
-                        <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.2/memory-pak-0.1.2-x86_64-unknown-freebsd" 
-                           class="download-card" 
-                           data-platform="freebsd"
-                           download="memory-pak-0.1.2-x86_64-unknown-freebsd">
+                            <div class="download-buttons">
+                                <a href="https://github.com/Aspenini/Memory-Pak/releases/download/v0.1.5/memory-pak_0.1.5-1_linux-amd64.deb" 
+                                   class="download-badge" 
+                                   download="memory-pak_0.1.5-1_linux-amd64.deb">DEB Installer</a>
+                            </div>
+                        </div>
+                        <div class="download-card" data-platform="freebsd">
                             <img src="img/os-bsd.png" alt="FreeBSD" class="platform-icon">
                             <span class="platform-name">FreeBSD</span>
-                            <span class="download-badge">Download</span>
-                        </a>
-                        <a href="#" class="download-card" data-platform="redox">
-                            <img src="img/os-redox.png" alt="Redox" class="platform-icon">
-                            <span class="platform-name">Redox</span>
-                            <span class="download-badge">Coming Soon</span>
-                        </a>
-                        <a href="#" class="download-card" data-platform="web">
+                            <span class="download-badge coming-soon">Coming Soon</span>
+                        </div>
+                        <div class="download-card" data-platform="web">
                             <img src="img/os-web.png" alt="Web" class="platform-icon">
                             <span class="platform-name">Web</span>
-                            <span class="download-badge">Coming Soon</span>
-                        </a>
-                        <a href="#" class="download-card" data-platform="ios">
+                            <span class="download-badge coming-soon">Coming Soon</span>
+                        </div>
+                        <div class="download-card" data-platform="ios">
                             <img src="img/os-ios.png" alt="iOS" class="platform-icon">
                             <span class="platform-name">iOS</span>
-                            <span class="download-badge">Coming Soon</span>
-                        </a>
-                        <a href="#" class="download-card" data-platform="android">
+                            <span class="download-badge coming-soon">Coming Soon</span>
+                        </div>
+                        <div class="download-card" data-platform="android">
                             <img src="img/os-android.png" alt="Android" class="platform-icon">
                             <span class="platform-name">Android</span>
-                            <span class="download-badge">Coming Soon</span>
-                        </a>
+                            <span class="download-badge coming-soon">Coming Soon</span>
+                        </div>
                         <div class="download-card cargo-card" data-platform="cargo">
                             <img src="img/cargo.png" alt="crates.io" class="platform-icon cargo-icon">
                             <span class="platform-name">crates.io</span>
