--- a/site/index.html
+++ b/site/index.html
@@ -163,7 +163,7 @@
                         <div class="download-card" data-platform="web">
                             <img src="img/os-web.png" alt="Web" class="platform-icon">
                             <span class="platform-name">Web</span>
-                            <span class="download-badge coming-soon">Coming Soon</span>
+                            <a href="app/" class="download-badge" target="_blank" rel="noopener noreferrer">Launch Web App</a>
                         </div>
                         <div class="download-card" data-platform="ios">
                             <img src="img/os-ios.png" alt="iOS" class="platform-icon">
