- revert previous change & manually add app to site

--- a/site/index.html
+++ b/site/index.html
@@ -163,7 +163,9 @@
                         <div class="download-card" data-platform="web">
                             <img src="img/os-web.png" alt="Web" class="platform-icon">
                             <span class="platform-name">Web</span>
-                            <a href="app/" class="download-badge" target="_blank" rel="noopener noreferrer">Launch Web App</a>
+                            <a href="/app/index.html" 
+                               class="download-badge" 
+                               target="_blank">Launch Web App</a>
                         </div>
                         <div class="download-card" data-platform="ios">
                             <img src="img/os-ios.png" alt="iOS" class="platform-icon">
