--- a/site/app/index.html
+++ b/site/app/index.html
@@ -73,7 +73,7 @@
             border-radius: 5px;
         }
     </style>
-<link rel="modulepreload" href="/Memory-Pak-6766ff40b8c98e6a.js" crossorigin="anonymous" integrity="sha384-VcYj8lJI2XiebHVX6Z6SWIvgI8DzoO02kjNuyeh6gHGJfIC8Gz9epiPDbALQGQN8"><link rel="preload" href="/Memory-Pak-6766ff40b8c98e6a_bg.wasm" crossorigin="anonymous" integrity="sha384-xr+A/SEAr9gHg5sRD6S4OR0dPBVIsvC01SVU4+Zb6MdElDdzm0f4b/4D/8A1+UUZ" as="fetch" type="application/wasm"></head>
+<link rel="modulepreload" href="./Memory-Pak-6766ff40b8c98e6a.js" crossorigin="anonymous" integrity="sha384-VcYj8lJI2XiebHVX6Z6SWIvgI8DzoO02kjNuyeh6gHGJfIC8Gz9epiPDbALQGQN8"><link rel="preload" href="./Memory-Pak-6766ff40b8c98e6a_bg.wasm" crossorigin="anonymous" integrity="sha384-OHxxbmB7Jq4taKhNEm/YWX26PGALtMdO37ikkrKYUdEjH3mVCwnjDBLEKBQax7JG" as="fetch" type="application/wasm"></head>
 <body>
     <div id="loading">
         <div class="spinner"></div>
@@ -102,8 +102,8 @@
     </script>
 
 <script type="module">
-import init, * as bindings from '/Memory-Pak-6766ff40b8c98e6a.js';
-const wasm = await init({ module_or_path: '/Memory-Pak-6766ff40b8c98e6a_bg.wasm' });
+import init, * as bindings from './Memory-Pak-6766ff40b8c98e6a.js';
+const wasm = await init({ module_or_path: './Memory-Pak-6766ff40b8c98e6a_bg.wasm' });
 
 
 window.wasmBindings = bindings;
